Docker: Build from template with sbt new
We also stop installing conscript in the docker image